# ligotab

./: Cargo.toml  README.md
src/: escape.rs  format.rs  lib.rs  main.rs  table.rs
tests/data/: customers-1-comment.csv  customers-1.csv  customers-10-comment.csv  sample.psv  sample.tsv  sample_uneven.psv
