[package]
name = "ligotab"
version = "0.1.0"
edition = "2021"
authors = ["William Blackerby <wmblackerby@gmail.com"]
description = "Format delimited data with lightweight markup"
repository = "https://github.com/blackerby/ligotab"
homepage = "https://github.com/blackerby/ligotab"
license = "MIT"
keywords = ["csv", "tsv", "markdown", "org", "confluence"]

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1

[[bin]]
name = "lt"
path = "src/main.rs"
